Feat: add L1 indexer API endpoint for scan api overview (#30)
* feat: add l1 indexer endpoint for scan api overview

* feat: add gorm

* fix: rename, refactor

---------
