# api/dto/block.go
@@ -1,0 +1,9 @@
+package dto
+
+type BlockHeightLatestResponse struct {
+	Height int64 `json:"height"`
+}
+
+type BlockTimeAverageResponse struct {
+	AverageBlockTime float64 `json:"avg_block_time"`
+}
